projects/vb6parse/snapshots/syntax/expressions/octothorpe_file_number_reference.snap
---
source: projects/vb6parse/src/syntax/expressions/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: x
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Octothorpe
              text: "#"
            - kind: IntegerLiteral
              text: "1"
        - kind: Newline
          text: "\n"
