projects/vb6parse/snapshots/syntax/expressions/simple_division.snap
---
source: projects/vb6parse/src/syntax/expressions/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: x
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: BinaryExpression
          children:
            - kind: NumericLiteralExpression
              children:
                - kind: IntegerLiteral
                  text: "20"
            - kind: Whitespace
              text: " "
            - kind: DivisionOperator
              text: /
            - kind: Whitespace
              text: " "
            - kind: NumericLiteralExpression
              children:
                - kind: IntegerLiteral
                  text: "4"
        - kind: Newline
          text: "\n"
